# aiowhitebit-mcp

./: .pre-commit-config.yaml  README.md  example_client.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_multi_exchange_server.py  run_server.py  setup.py  simple_test.py  test_mcp.py  test_mcp_simple.py
.github/workflows/: publish.yml  test.yml
examples/: README.md  claude_desktop_client.py  claude_desktop_example.py  claude_desktop_server.py  client_example.py  private_api_example.py  run_server.py  sse_server_example.py  test_run.py  websocket_example.py
src/aiowhitebit_mcp/: __init__.py  cache.py  circuit_breaker.py  cli.py  client.py  exchange.py  metrics.py  monitoring.py  multi_exchange_server.py  proxy.py  rate_limiter.py  server.py  types.py  web_interface.py
src/aiowhitebit_mcp/templates/: base.html  cache.html  circuit_breakers.html  dashboard.html  health.html  metrics.html  rate_limiter.html
tests/: __init__.py  conftest.py  run_tests.py  test_cache.py  test_circuit_breaker.py  test_integration.py  test_integration_updated.py  test_mock.py  test_private_api.py  test_public_v4.py  test_server.py
typings/aiowhitebit/clients/: websocket.pyi
typings/aiowhitebit/models/: __init__.pyi
typings/fastmcp/: types.pyi
