[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aiowhitebit-mcp"
version = "0.1.0"
description = "MCP server and client for WhiteBit cryptocurrency exchange API"
requires-python = ">=3.9"
dependencies = [
    "aiowhitebit==0.1.5",
    "fastmcp==2.1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.23.5",
    "pytest-cov>=4.1.0",
    "ruff>=0.11.5",
    "pyright>=1.1.399",
    "pre-commit>=3.6.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "auto"
markers = [
    "asyncio: mark a test as an asyncio test",
    "slow: mark test as slow",
    "integration: mark test as integration test",
]

[tool.ruff]
line-length = 120
target-version = "py39"
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.isort]
known-first-party = ["aiowhitebit_mcp"]

[tool.pyright]
pythonVersion = "3.9"
typeCheckingMode = "strict"
reportMissingImports = true
reportMissingTypeStubs = false
exclude = ["tests/**"]
